# speech-to-speech

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.arm64  Dockerfile.openvoice  LICENSE  MANIFEST.in  MODELVERSE.md  PR_DESCRIPTION.md  README.md  README_summarizer.md  audio_streaming_client.py  baseHandler.py  benchmark_e2e.py  benchmark_stt.py  benchmark_tts.py  conftest.py  debug  docker-compose.yml  handler.py  listen_and__play.py  listen_and_play.py  listen_and_play_realtime.py  local_audio_streamer.py  mic_transcriber.py  microphone_test.py  pipeline_control.py  pipeline_messages.py  pyproject.toml  requirements.openvoice.txt  requirements.txt  requirements_dev.txt  requirements_mac.txt  requirements_summarizer.txt  resample_handler.py  s2mlt_usage.md  s2s_handler.py  s2s_pipeline.py  (+7 more)
.github/scripts/: star_history.py
.github/workflows/: ci.yml  publish.yml  star-history.yml
AEC/: livekit_aec_handler.py  test_aec.py
AEC/test_scripts/: test_aec.py
LLM/: README.md  chat.py  language_model.py  lm_output_processor.py  minimax_language_model.py  mlx_agent_model.py  mlx_language_model.py  mlx_lm.py  ollama_language_model.py  openai_api_language_model.py  utils.py  voice_prompt.py
LLM/tool_call/: function_call.py  function_tool.py  qwen3coder_tool_parser.py  qwen3coder_tool_parser_vllm.py  signature_from_schema.py  tool_prompt.py
STT/: README.md  faster_whisper_handler.py  lightning_whisper_mlx_handler.py  mlx_audio_whisper_handler.py  moonshine_handler.py  openai_whisper_handler.py  paraformer_handler.py  parakeet_tdt_handler.py  smart_progressive_streaming.py  transcription_notifier.py  whisper_stt_handler.py
STT/test_scripts/: test_openai_whisper.py
STV/: w2v_stv_handler.py
TTS/: README.md  base_tts_handler.py  chatTTS_handler.py  facebookmms_handler.py  kokoro_handler.py  kokoro_mlx_handler.py  melo_handler.py  melotts.py  minimax_tts_handler.py  openvoice_handler.py  parler_handler.py  pocket_tts_handler.py  qwen3_tts_handler.py
TTS/STV/: phoneme_viseme_map.json  phoneme_viseme_map_readable.json.txt  speech_to_visemes.py
VAD/: smart_turn_handler.py  vad_diagnostics.py  vad_handler.py  vad_iterator.py
api/openai_realtime/: README.md  __init__.py  connection.py  events.py  protocol.py  runtime_config.py  server.py  service.py  transcription_notifier.py  utils.py  websocket_router.py
api/openai_realtime/handlers/: __init__.py  audio.py  base.py  conversation.py  response.py  session.py
archive/: README.md
archive/STT/: moonshine_handler.py
archive/TTS/: melo_handler.py  parler_handler.py
archive/arguments_classes/: parler_tts_arguments.py
arguments_classes/: chat_tts_arguments.py  facebookmms_tts_arguments.py  faster_whisper_stt_arguments.py  kokoro_tts_arguments.py  language_model_arguments.py  melo_tts_arguments.py  minimax_language_model_arguments.py  minimax_tts_arguments.py  mlx_audio_whisper_arguments.py  mlx_language_model_arguments.py  module_arguments.py  ollama_language_model_arguments.py  open_api_language_model_arguments.py  openvoice_arguments.py  paraformer_stt_arguments.py  parakeet_tdt_arguments.py  parler_tts_arguments.py  pocket_tts_arguments.py  qwen3_tts_arguments.py  socket_receiver_arguments.py  socket_sender_arguments.py  transformers_language_model_arguments.py  vad_arguments.py  w2v_stv_arguments.py  websocket_streamer_arguments.py  whisper_stt_arguments.py
connections/: local_audio_streamer.py  socket_receiver.py  socket_sender.py  websocket_streamer.py
demo/: .dockerignore  .gitignore  CONTEXT.md  DESIGN.md  Dockerfile  README.md  auth.py  index.html  limiter.py  main.js  requirements.txt  server.py  style.css
demo/docs/adr/: 0001-docker-space-with-search-proxy.md
demo/rtc/: s2s-rtc-client.js
demo/ui/: account.js  chat.js  dom.js
demo/worklets/: audio-playback.js  mic-capture.js
demo/ws/: codec.js  orb-visualizer.js  s2s-ws-client.js
docs/: openai-audio-endpoints.md
evals/voice_mode/: README.md  run_voice_mode_eval.py
handlers/: melo_tts_handler.py
scripts/: benchmark_stt.py  benchmark_tts.py  concurrent_synthetic_realtime_clients.py  listen_and_play.py  listen_and_play_realtime.py  synthetic_conversation_realtime_client.py
src/speech_to_speech/: __init__.py  baseHandler.py  s2mlt.py  s2s_pipeline.py
src/speech_to_speech/LLM/: README.md  audio_input_notifier.py  base_openai_compatible_language_model.py  chat.py  chat_completions_language_model.py  compaction_prompt.py  language_model.py  lm_output_processor.py  openai_api_language_model.py  responses_api_language_model.py  server_tools.py  (+5 more)
tests/: install_smoke.py  test_audio_input_notifier.py  test_benchmark_tts.py  test_chat.py  test_chat_completions_backend.py  test_cli_defaults.py  test_endpoint_admission.py  test_keenable_tool_loop.py  test_kokoro_handler.py  test_llm_utils.py  test_lm_output_processor.py  test_minimax_language_model.py  test_minimax_tts_handler.py  test_openai_api_language_model.py  test_openai_audio_handlers.py  test_openai_compatible_warmup.py  test_openai_multimodal_handler.py  test_paraformer_transcription_events.py  test_parakeet_language_detection.py  test_parakeet_transcription_events.py  test_qwen3_tts_handler_backend.py  test_responses_api_language_model.py  test_s2mlt.py  test_sense_voice_transcription_events.py  test_server_tools.py  test_speculative_turns.py  test_stt_stale_filter.py  test_text_prompt.py  test_transcription_notifier.py  test_tts_input_coalescing.py  test_vad_diagnostics.py  test_vad_iterator.py  test_vision_router.py  test_voice_prompt.py  test_websocket_session_lifecycle.py  test_websocket_streamer_logging.py  test_whisper_progressive_streaming.py
tests/openai_realtime/: conftest.py  test_llm_proxy.py  test_openai_client.py  test_realtime_service.py  test_runtime_config.py  test_webrtc.py  test_websocket_router.py
tests/tool_call/: test_function_parser.py  test_qwen_xml_streaming.py  test_signature_from_schema.py
utils/: mlx_lock.py  thread_manager.py  utils.py
(+92 files in other folders)
