[project]
name = "speech-to-speech"
version = "0.1.0"
description = "Low-latency speech-to-speech pipeline"
requires-python = ">=3.10"
dependencies = [
    "lingua-language-detector>=2.0.2",
    "nltk==3.9.1",
    "melotts @ git+https://github.com/andimarafioti/MeloTTS.git",
    "torch==2.11.0; platform_system == 'Darwin'",
    "torchaudio==2.11.0; platform_system == 'Darwin'",
    "torch>=2.4.0; platform_system != 'Darwin'",
    "torchvision>=0.26.0",
    "sounddevice>=0.5.0",
    "websockets>=12.0",
    "ChatTTS>=0.1.1",
    "funasr>=1.1.6",
    "faster-whisper>=1.0.3",
    "modelscope>=1.17.1",
    "onnxruntime<1.24; python_version < '3.11'",
    "openai==2.28.0",
    "pocket-tts>=0.1.0",
    "lightning-whisper-mlx>=0.0.10; platform_system == 'Darwin'",
    "mlx-lm>=0.14.0; platform_system == 'Darwin'",
    "mlx-vlm==0.4.1; platform_system == 'Darwin'",
    "mlx-audio==0.4.1; platform_system == 'Darwin'",
    "misaki>=0.9.4; platform_system == 'Darwin'",
    "espeakng-loader>=0.2.4; platform_system == 'Darwin'",
    "spacy>=3.8.4; platform_system == 'Darwin'",
    "phonemizer-fork>=3.3.2; platform_system == 'Darwin'",
    "nano-parakeet>=0.2.0; platform_system != 'Darwin'",
    "kokoro>=0.9.2; platform_system != 'Darwin'",
    "faster-qwen3-tts>=0.2.5; platform_system != 'Darwin'",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
prerelease = "allow"
